base/pingfederate/service.yaml
# This service exposes the pingfederate admin and OAuthPlayground ports to the
# cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingfederate-admin
spec:
  ports:
    - port: 9999
      name: pf-admin

---

apiVersion: v1
kind: Service
metadata:
  name: pingfederate
spec:
  ports:
    - port: 9031
      name: pf-runtime
