base/pingfederate/ingress.yaml
# This defines the ingress for the pingfederate authorization services.

# NOTE: it will only work if an ingress controller (e.g. nginx) is running on
# your cluster.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingfederate-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx-public
spec:
  rules:
  - host: pingfederate.anydevops.com
    http:
      paths:
      # This rule gives external access to the pingfederate AS endpoints
      - path: /
        backend:
          serviceName: pingfederate
          servicePort: 9031

---

# This defines the ingress for the pingfederate admin services.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingfederate-admin
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/ingress.class: nginx-public
spec:
  rules:
  - host: pingfederate-admin.anydevops.com
    http:
      paths:
      # This rule gives internal access to the pingfederate admin services.
      - path: /
        backend:
          serviceName: pingfederate-admin
          servicePort: 9999
